change user router post not required auth
